nginx-ingress-blue-app.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-app-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "75"
spec:
  ingressClassName: nginx
  rules:
    - host: bluegreenapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blue-app
                port:
                  number: 8080
